--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,3 @@
-.ant-btn, .ant-btn-icon-only.ant-btn-sm, .ant-modal-content {
+.ant-btn, .ant-btn-icon-only.ant-btn-sm, .ant-modal-content, .ant-input {
   border-radius: 0px;
 }
