--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,14 @@
 .netral-row {
   background: cornsilk;
 }
+
+.ant-back-top-inner {
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    border-radius: 4px;
+    background-color: #1088e9;
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+}
