--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-.ant-btn, .ant-btn-icon-only.ant-btn-sm, .ant-modal-content, .ant-input, .ant-select-selection, .ant-input-number {
-  border-radius: 0px;
+.ant-btn, .ant-btn-icon-only.ant-btn-sm, .ant-modal-content,
+.ant-input, .ant-select-selection, .ant-input-number,
+.ant-table, .ant-pagination-item, .ant-calendar,
+.ant-calendar-ok-btn, .ant-select-dropdown, .ant-radio-button-wrapper {
+  border-radius: 0px!important;
 }
 
 .good-row {
@@ -16,11 +19,46 @@
 
 .ant-back-top-inner {
     height: 40px;
-    width: 40px;
+    width: 80px;
     line-height: 40px;
-    border-radius: 4px;
+    border-radius: 0px;
     background-color: #1088e9;
     color: #fff;
     text-align: center;
     font-size: 20px;
+}
+
+.events {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.events .ant-badge-status {
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  text-overflow: ellipsis;
+  font-size: 12px;
+}
+.notes-month {
+  text-align: center;
+  font-size: 28px;
+}
+.notes-month section {
+  font-size: 28px;
+}
+
+.ant-fullcalendar-date {
+    height: auto;
+    min-height: 140px;
+}
+
+.ant-fullcalendar-fullscreen .ant-fullcalendar-content {
+    height: auto;
+}
+
+.ant-fullcalendar-fullscreen .ant-fullcalendar-value {
+    font-size: 70px;
+    top: 12px;
+    position: relative;
 }
