--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 .ant-btn, .ant-btn-icon-only.ant-btn-sm, .ant-modal-content,
 .ant-input, .ant-select-selection, .ant-input-number,
 .ant-table, .ant-pagination-item, .ant-calendar,
-.ant-calendar-ok-btn, .ant-select-dropdown, .ant-radio-button-wrapper, .ant-tag {
+.ant-calendar-ok-btn, .ant-select-dropdown, .ant-radio-button-wrapper,
+.ant-tag, .ant-popover-inner, .ant-message-notice-content {
   border-radius: 0px!important;
 }
 
